# sdl2opengl

./: CMakeLists.txt  README.md  build.bat  main.cpp
